[package]
name = "romanticise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.20.1", features = ["full"] }
warp = "0.3.2"
