[package]
name = "romanticise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
bytes = "1.2.1"
futures = "0.3.23"
reqwest = "0.11.11"
seahash = "4.1.0"
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-native-tls", "offline"] }
thiserror = "1.0.32"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.2"
